<resources>
    <string name="app_name">D-day</string>
    <string name="hello">Hello,</string>
    <string name="search">Search…</string>
    <string name="today">My Events</string>
    <string name="prompt">prompt</string>
    <string name="prompt_text">Create an Event to get started</string>

    <string name="pref_file">com.grind.preferences_file</string>
    <string name="pref_login_status">com.grind.preferences_login_status</string>
    <string name="pref_username">com.grind.preferences_username</string>
    <string name="pref_user_id">com.grind.preferences_user_id</string>
    <string name="stranger">Stranger</string>
    <string name="back_button">back_button</string>
    <string name="event_title">Event Title…</string>
    <string name="event_description">Event description…</string>
    <string name="create_event">Create Event</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="edit_event">Edit Event</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="pending">Pending</string>
    <string name="status">Status</string>
    <string name="update_event">Update Event</string>
    <string name="filter">Filter</string>
</resources>
