<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:contentDescription="@string/back_button"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/back"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingBottom="20dp"
                    android:paddingRight="30dp"
                    android:paddingEnd="30dp"
                    app:elevation="5dp"
                    android:paddingLeft="0dp"
                    android:paddingStart="0dp"
                    android:gravity="start"
                    android:text="@string/event_title"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="25sp" />
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:paddingTop="5dp"
                    app:elevation="2dp"
                    android:layout_marginLeft="-20dp"
                    android:layout_marginStart="-20dp"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/edit"/>
            </LinearLayout>
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:ellipsize="end"
                android:gravity="start"
                android:paddingBottom="10dp"
                android:text="@string/event_description"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:background="@drawable/button_primary"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/date"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/calendar"/>
                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/date"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/time"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/clock"/>
                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/viewSnack"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnDelete"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/delete"
            android:background="@drawable/button_primary"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/btnComplete"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/complete"
            android:background="@drawable/button"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/viewSnack"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>