<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:contentDescription="@string/back_button"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/cancel"/>
            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:background="#00000000"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:hint="@string/event_title"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="25sp"
                android:inputType="textCapWords"
                android:importantForAutofill="no" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:background="@drawable/button_primary"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:ellipsize="end"
                android:background="#00000000"
                android:gravity="start"
                android:inputType="textMultiLine|textCapSentences"
                android:paddingBottom="10dp"
                android:hint="@string/event_description"
                android:textSize="18sp"
                android:importantForAutofill="no" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/date"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/date"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/start_date"/>
                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/date"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/end_date"/>
                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/time"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/time"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/start_time"/>
                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/time"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/end_time"/>
                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/update_event"
        android:layout_above="@id/viewSnack"
        android:background="@drawable/button"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/viewSnack"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>