<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:textStyle="normal"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stranger"
                    android:textColor="@color/colorWhite"
                    android:textSize="35sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/search"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="25dp"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:maxLines="1"
                    android:imeOptions="actionSearch"
                    android:hint="@string/search"
                    android:textColorHint="@color/colorDarkText"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:background="@drawable/search_bar"
                    android:importantForAutofill="no" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:padding="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="3dp"
                    android:background="@drawable/search_bar"
                    android:layout_marginBottom="20dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/events_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/no_events"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/prompt_text"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="600dp"
                    android:layout_marginTop="-120dp"
                    android:layout_marginBottom="-75dp"
                    android:contentDescription="@string/prompt"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/prompt"
                    android:scaleType="centerInside"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/add"
        android:background="@drawable/button"
        android:layout_height="wrap_content"
        android:layout_above="@id/viewSnack"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/viewSnack"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>