<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".NameActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                app:elevation="5dp"
                android:contentDescription="@string/back_button"
                android:padding="10dp"
                android:layout_margin="20dp"
                android:src="@drawable/back"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="1dp"
                android:src="@drawable/nametag"
                android:contentDescription="@string/stranger"
                android:scaleType="centerInside"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                app:elevation="5dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:background="#00000000"
                android:inputType="textCapWords"
                android:textSize="20sp"
                android:maxLength="15"
                android:maxLines="1"
                android:gravity="center"
                android:hint="@string/stranger"
                android:importantForAutofill="no" >
                <requestFocus/>
            </EditText>
        </FrameLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/save"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        app:elevation="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_small"
        android:contentDescription="@string/prompt"
        android:src="@drawable/enter"
        android:scaleType="centerInside"/>
</RelativeLayout>